--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   width: 100vw;
   height: 100vh;
@@ -60,6 +61,98 @@
 
         &:hover {
           filter: brightness(.9);
+        }
+      }
+    }
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+
+    width: 736px;
+
+    margin-top: 91px;
+
+    .taskStatus {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      width: 100%;
+
+      div {
+        display: flex;
+        align-items: center;
+
+        gap: .25rem;
+
+        p {
+          font-weight: 700;
+          font-size: 14px;
+        }
+
+        span {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          font-weight: 700;
+          font-size: 12px;
+
+          color: #D9D9D9;
+
+          padding: 2px 8px;
+
+          width: 12px;
+          height: 19px;
+
+          background: #333333;
+          border-radius: 999px;
+        }
+      }
+
+      .taskStatusCreated {
+        p {
+          color: #4EA8DE;
+        }
+      }
+
+      .taskStatusConcluded {
+        p {
+          color: #8284FA;
+        }
+      }
+    }
+
+    .tasks {
+      display: flex;
+      flex-direction: column;
+
+      gap: 1rem;
+
+      margin-top: 24px;
+
+      .noTasks {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+
+        width: 736px;
+        height: 244px;
+
+        border-top: 1px solid #333333;
+        border-radius: 8px;
+
+        .noTasksMessage {
+          strong, p {
+            font-size: 16px;
+            text-align: center;
+
+            color: #808080;
+          }
         }
       }
     }
